apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homelab
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: Homelab Dashboard
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Websites
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
    gethomepage.dev/pod-selector: ""
spec:
  rules:
    - host: "homepage.my.network"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
